<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Figuras Geometricas</string>
    <string name="triangulo">Triángulo</string>
    <string name="cuadrado">Cuadrado</string>
    <string name="rectangulo">Rectángulo</string>
    <string name="circulo">Círculo</string>
    <string name="rombo">Rombo</string>
    <string name="pentagono">Pentágono</string>
    <string name="hexagono">Hexágono</string>
    <string name="LadoA">Lado A</string>
    <string name="LadoB">Lado B</string>
    <string name="calcular">Calcular</string>
    <string name="resultado">Resultado</string>
    <string name="texto">Calcular el perimetro de un rectangulo de lados a, b:</string>
    <string name="PerimetroRectangulo" tools:ignore="ExtraTranslation">Perimetro Rectangulo</string>
    <string name="perimetro_rombo">Perímetro del Rombo</string>
    <string name="bnCalcular">Calcular</string>
    <string name="perimRombo">perimRombo</string>
    <string name="radio">Input radio</string>
    <string name="tvtitle">Circle Circumference</string>
    <string name="section">Perimeter Circle</string>
    <string name="lado_cuadrado">Ingrese el lado de su cuadrado en centimetros:</string>
    <string name="hint_lado_cuadrado">Ingrese el lado</string>
    <string name="calcular_perimetro">Calcular Perímetro</string>
    <string name="diametro">DiametroCuadrado</string>
    <string name="area">Area</string>
    <string name="perimetro">Perimetro</string>
    <string name="seleccion">Selección</string>
    <string name="tria_per">Perímetro de un Triángulo</string>
    <string name="lado1tp">Lado 1</string>
    <string name="lado2tp">Lado 2</string>
    <string name="lado3tp">Lado 3</string>
    <string name="calculartriper">Calcular</string>
    <string name="perimetrotrian">Perimetro Triangulo</string>
    <string name="dimen">Dimensiones:</string>
    <string name="width">Ancho:</string>
    <string name="large">Largo:</string>
    <string name="titulo">Area del cuadrado</string>
    <string name="ingresevalor">Ingrese el valor del LADO del cuadrado (cm)</string>
    <string name="areacuadrado">Area Cuadrado</string>
    <string name="PerPenIngrese">Ingrese la longitud</string>
    <string name="btnCalcular">Calcular</string>
    <string name="tvResultado">Resultado</string>
    <string name="PerimetroPentagono">PerimetroPoligono</string>
    <string name="calcular_area_de_un_triangulo">calcular area de un triangulo</string>
    <string name="ingrese_la_base">ingrese la base</string>
    <string name="ingrese_la_altura">ingrese la altura</string>
    <string name="arearombo">Area Rombo</string>
    <string name="area_circulo">Area del circulo</string>
    <string name="ingrese_el_radio">Ingrese el radio</string>
    <string name="cm">cm</string>
    <string name="radio_nuevo">Radio:</string>
    <string name="Calcular">Calcular:</string>
    <string name="Ingrese">Ingrese medida de un lado del pentágono:</string>
    <string name="Area">Area:</string>
    <string name="IngreseA">Ingrese medida del apotema:</string>

</resources>
