<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".areacirculoActivity">

    <LinearLayout  android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:orientation="vertical">
        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="50dp"
                  android:text="@string/area_circulo"
                  android:gravity="center"/>

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="40dp"
                      android:orientation="horizontal">

            <TextView android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      android:layout_weight="0.9"
                      android:text="@string/radio_nuevo"
                      android:layout_marginLeft="10dp"
                      android:gravity="left"/>

            <EditText android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      android:layout_weight="2"
                      android:id="@+id/etRadio"
                      android:inputType="number"
                      android:hint="@string/ingrese_el_radio"/>

            <TextView android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      android:layout_weight="0.7"
                      android:text="@string/cm"
                      android:gravity="center"/>
        </LinearLayout>

        <Button android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/bnCalcular"
                android:layout_marginTop="40dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:text="@string/calcular"/>

        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="40dp"
                  android:id="@+id/tvResultado"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>