<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Per_Rectangulo_Activity">

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/LadoA"

            android:ems="10"
            android:id="@+id/etladoa"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/LadoB"
            android:ems="10"
            android:id="@+id/etladob" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/etladoa"/>
    <TextView
            android:text="@string/resultado"
            android:layout_width="202dp"
            android:layout_height="64dp"
            android:id="@+id/tvresultado"
            android:layout_marginTop="76dp"
            app:layout_constraintTop_toBottomOf="@+id/etladob" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.497"/>
    <Button
            android:text="@string/calcular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btcalcular" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="52dp"
            app:layout_constraintTop_toBottomOf="@+id/tvresultado" app:layout_constraintHorizontal_bias="0.498"/>
    <TextView
            android:text="@string/texto"
            android:layout_width="222dp"
            android:layout_height="99dp"
            android:textSize="20dp"
            android:id="@+id/textView" android:layout_marginTop="48dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.497"/>
</androidx.constraintlayout.widget.ConstraintLayout>