<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="20dp"
        android:background="@color/colorPrimary"
        tools:context=".DiametroCuadradoActivity">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/titulo"
            android:text="@string/lado_cuadrado"
            android:textSize="30sp"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:gravity="center"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_lado_cuadrado"
            android:layout_marginTop="40dp"
            android:inputType="number"
            android:hint="@string/hint_lado_cuadrado"
            android:textSize="30sp"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/boton"
            android:text="@string/calcular_perimetro"
            android:gravity="center"
            android:textSize="30sp"
            android:layout_marginTop="40dp"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/perimetro"
            android:layout_marginTop="40dp"
            android:textSize="30sp"
            android:gravity="center"/>

</LinearLayout>