<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".PerPentaActivity">


    <EditText android:layout_width="254dp"
              android:layout_height="51dp"
              android:id="@+id/etLongitud"
              android:hint="@string/PerPenIngrese"
              android:inputType="number"
              android:layout_marginTop="48dp"
              app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
              android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
              android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.496"/>
    <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnCalcular"
            android:id="@+id/btnCalcular"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/etLongitud" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.498"/>

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:hint="@string/tvResultado"
              android:id="@+id/tvResult"
              android:layout_marginTop="44dp"
              app:layout_constraintTop_toBottomOf="@+id/btnCalcular" app:layout_constraintEnd_toEndOf="parent"
              android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
              android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.498"/>

</androidx.constraintlayout.widget.ConstraintLayout>