<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".trianarea_Activity">

    <TextView
            android:text="@string/areatrian"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_width="244dp"
            android:layout_height="54dp"
            android:id="@+id/textView" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="84dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="203dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="150dp" app:layout_constraintHorizontal_bias="0.36"/>
    <LinearLayout
            android:orientation="vertical"
            android:padding="15dp"
            android:layout_width="379dp"
            android:layout_height="152dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
            android:id="@+id/linearLayout">
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ingrese_la_base"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/etbase"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ingrese_la_altura"
                android:layout_marginTop="20dp"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/etaltura"/>
    </LinearLayout>
    <Button
            android:text="@string/calcular"
            android:layout_width="249dp"
            android:layout_height="47dp"
            android:id="@+id/btcalcular" android:layout_marginEnd="185dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="138dp"
            android:layout_marginTop="44dp" app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintHorizontal_bias="0.372"/>
    <TextView
            android:hint="@string/resultado"
            android:textSize="20sp"
            android:layout_width="225dp"
            android:layout_height="42dp"
            android:id="@+id/tvresultado"
            android:layout_marginTop="64dp"
            app:layout_constraintTop_toBottomOf="@+id/btcalcular" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.477"/>
</androidx.constraintlayout.widget.ConstraintLayout>