<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".Area_cuadradoActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titulo"
                android:textSize="40sp"
                android:textAlignment="center"
                android:textStyle="bold"
        />
    </LinearLayout>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
    >

        <ImageView
                android:layout_width="100sp"
                android:layout_height="100sp"
                android:src="@drawable/cuadrado"
        />
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_marginTop="10dp"
    >

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etValorlado"
                android:hint="@string/ingresevalor"
                android:textAlignment="center"
                android:inputType="numberDecimal"
        />
    </LinearLayout>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:gravity="center"
    >

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calcular"
                android:textAllCaps="false"
                android:id="@+id/btnCalcular"
        />
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
    >

        <TextView android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:id="@+id/tvResultado"
                  android:textSize="20sp"
                  android:textColor="@color/colorPrimaryDark"
                  android:textAlignment="center"
        />
    </LinearLayout>

</LinearLayout>